[gd_scene load_steps=9 format=3 uid="uid://cvu86udg6mmi6"]

[ext_resource type="Script" path="res://scenes/exercises.gd" id="1_v1e8f"]
[ext_resource type="FontFile" uid="uid://cetsjqaghxe7e" path="res://ZTGatha-SemiBold.ttf" id="2_ostjv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00l6o"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4t6dp"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kiyo3"]
bg_color = Color(1, 0.843137, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsxfl"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y20cx"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3blu6"]
bg_color = Color(1, 0.843137, 0, 1)

[node name="exercises" type="Node"]
script = ExtResource("1_v1e8f")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0666667, 0.317647, 0.45098, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 112.0
offset_right = 147.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ostjv")
theme_override_font_sizes/font_size = 40
text = "Exercises"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Node" parent="."]

[node name="ReactionButton" type="Button" parent="Buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -84.0
offset_right = 264.0
offset_bottom = -16.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ostjv")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_00l6o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4t6dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_kiyo3")
text = "Reaction Time
Test"

[node name="SequenceButton" type="Button" parent="Buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 488.0
offset_top = -84.0
offset_right = 664.0
offset_bottom = -16.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ostjv")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_00l6o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4t6dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_kiyo3")
text = "Sequence 
Memory"

[node name="AimButton" type="Button" parent="Buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 888.0
offset_top = -84.0
offset_right = 1064.0
offset_bottom = -16.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ostjv")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_00l6o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4t6dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_kiyo3")
text = "Aim Trainer"

[node name="VerbalButton" type="Button" parent="Buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 688.0
offset_top = 52.0
offset_right = 864.0
offset_bottom = 120.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ostjv")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_00l6o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4t6dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_kiyo3")
text = "Language 
Memory"

[node name="NumberButton" type="Button" parent="Buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 288.0
offset_top = 52.0
offset_right = 464.0
offset_bottom = 120.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ostjv")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_00l6o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4t6dp")
theme_override_styles/normal = SubResource("StyleBoxFlat_kiyo3")
text = "Number 
Memory"

[node name="BackButton" type="Button" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 196.0
offset_right = 45.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ostjv")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_jsxfl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y20cx")
theme_override_styles/normal = SubResource("StyleBoxFlat_3blu6")
text = "Back
"

[connection signal="pressed" from="Buttons/ReactionButton" to="." method="_on_reaction_button_pressed"]
[connection signal="pressed" from="Buttons/SequenceButton" to="." method="_on_sequence_button_pressed"]
[connection signal="pressed" from="Buttons/AimButton" to="." method="_on_aim_button_pressed"]
[connection signal="pressed" from="Buttons/VerbalButton" to="." method="_on_verbal_button_pressed"]
[connection signal="pressed" from="Buttons/NumberButton" to="." method="_on_number_button_pressed"]
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_back_button_pressed"]
